--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ ul {
   margin: 0;
 }
 
-li{
+li {
   cursor: pointer;
 }
 
@@ -35,7 +35,7 @@ li{
   --w7: 700;
   --w9: 900;
 
-  --border-1: 1px solid #E3E4E6;
+  --border-1: 1px solid #e3e4e6;
 
   background-color: white;
   color: var(--font-color);
@@ -56,6 +56,8 @@ li{
   background-color: var(--bg-gray);
   padding: 0.5rem 1.25rem;
   font-weight: var(--w7);
+  white-space: nowrap;
+  border-bottom: var(--border-1);
 }
 
 .main-flex-item ~ .main-flex-item {
