--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,17 @@
 html {
   min-width: 100vw;
   min-height: 100vh;
+  width: fit-content;
+  height: fit-content;
+  /* border: 10px solid black; */
 }
 
 body {
   padding: 1rem;
   width: fit-content;
   height: fit-content;
+  margin: auto;
+  /* border: 1px solid black; */
 }
 
 ul {
