--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@ svg {
   --txt-blue: #5984e2;
   --bg-red: #f9d8d8;
   --bg-gray: #fafbfd;
-  --gray: hsla(210, 30%, 78%, 0.24);
+  --gray: #b6c7d83d;
   --font-color: #21252b;
 
   --w1: 100;
